--- a/src/styles/LoginPage.css
+++ b/src/styles/LoginPage.css
@@ -56,7 +56,7 @@
 }
 
 .homeimage {
-  background-image: url(../../public/IMG_20220418_071607_1.jpg);
+  background-image: url(../../public/PXL_20240911_132007887.jpg);
   display: block;
   text-align: center;
   margin: auto;
@@ -65,8 +65,16 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  /*filter: blur(2px);*/
+  
+
 }
 
 .shadowtxt {
+  color: white;
+  text-shadow:
+    1px 1px 2px black,
+    0 0 1em black,
+    0 0 0.2em black;
   color: white;
 }
