--- a/src/components/envios/ModalGaleriaFotos.css
+++ b/src/components/envios/ModalGaleriaFotos.css
@@ -1,7 +1,32 @@
-.position-relative .delete-button {
-  display: none;
+.imagen-container {
+  position: relative;
 }
 
-.position-relative:hover .delete-button {
-  display: block !important;
+.imagen-previsualizacion {
+  transition: transform 0.2s ease-in-out;
+}
+
+.imagen-previsualizacion:hover {
+  transform: scale(1.1);
+}
+
+.btn-eliminar-hover {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  background-color: rgba(255, 0, 0, 0.8);
+  color: white;
+  border: none;
+  padding: 0.3rem 0.6rem;
+  display: none;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.imagen-container:hover .btn-eliminar-hover {
+  display: block;
+}
+
+.btn-eliminar-hover i {
+  font-size: 1.2rem;
 }
